--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,16 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <link rel="stylesheet" href="https://use.fontawesome.com/021da17a9a.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
+  <link rel="stylesheet" type="text/css" media="all" href="{{ "/assets/css/style.css" | relative_url }}"  />
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+
+  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/FR.svg" width="16" heigth="16">
+
+
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
