--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,13 @@
 
   <body>
 
-
+    {% include header.html %}
 
     <main class="page-content" aria-label="Content">
 
         {{ content }}
 
     </main>
-
 
     {% include footer.html %}
 
