--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,12 @@
 ---
 layout: default
 ---
-<article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
+<header class="post-header">
+  <div class="container-fluid">
+    <h3> {{ page.title | escape }}</h3>
   </div>
-
-</article>
+</header>
+<div class="container">
+    {{ content }}
+</div>
