--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,25 +1,55 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<div class="wrapper">
+ <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+   <header class="post-header">
+     <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
+     <p class="post-meta">
+       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+         {% assign date_format = site.minima.date_format | default: "%A, %-d %b %Y" %}
+           <i class="fa fa-clock-o" aria-hidden="true"></i> &nbsp;{{ page.date | date: date_format }} &emsp;
+       </time>
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        {{ page.date | date: date_format }}
-      </time>
-      {% if page.author %}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
-      {% endif %}</p>
-  </header>
+       <i class="fa fa-user-o" aria-hidden="true"></i>
+         <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">&nbsp;{{ site.author_name }} &emsp;</span></span>
+       <i class="fa fa-folder-o" aria-hidden="true"></i> &nbsp;{{ page.categories }}
+     </p>
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
-  </div>
+   </header>
 
-  {% if site.disqus.shortname %}
-    {% include disqus_comments.html %}
-  {% endif %}
-</article>
+   <div class="post-content" itemprop="articleBody">
+     {{ content }}
+   </div>
+
+   <div>
+       <hr></br>
+       <div class="row">
+           <div class="col-md-3">
+             <h4>Share this on: </h4>
+           </div>
+           <div class="col">
+             <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">
+               <button type="button" class="btn btn-info"><i class="fa fa-twitter fa-share" aria-hidden="true"></i> Twitter</button></a>
+             <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
+               <button type="button" class="btn btn-primary"> <i class="fa fa-facebook fa-share" aria-hidden="true"></i> Facebook</button></a>
+             <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+">
+               <button type="button" class="btn btn-danger"><i class="fa fa-google-plus fa-share" aria-hidden="true"></i> Google+</button></a>
+             <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url}}&title={{ page.title }}" rel="nofollow" target="_blank" title="Share on Linkedin">
+               <button type="button" class="btn btn-primary"><i class="fa fa-linkedin fa-share" aria-hidden="true"></i> Linkedin</button></a>
+           </div>
+       </div>
+        </br>
+   </div>
+
+
+
+
+
+     <hr></br></br>
+     {% if site.disqus.shortname %}
+       {% include disqus_comments.html %}
+     {% endif %}
+ </article>
+
+</div>
