--- a/_layouts/blog_layout.html
+++ b/_layouts/blog_layout.html
@@ -14,6 +14,7 @@ layout: default
       <div class="row">
         {% for post in site.categories.Featured limit:3 %}
           <div class="col-md-4">
+            <p><a href="{{ post.url }}"><img src="{{site.url}}/assets/images/{{post.image}}"></a><p>
             <h2><a href="{{ site.baseurl }}{{ post.url }}">{{post.title}}</a></h2>
             <p>{{post.excerpt}}</p>
             <p><a class="btn btn-primary" href="{{post.url}}" role="button">Read more »</a></p>
@@ -24,5 +25,3 @@ layout: default
       {{ content }}
   </div>
 </article>
-
-
