--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,15 +42,24 @@ layout: default
        </div>
         </br>
    </div>
-
-
-
-
-
+   <div>
      <hr></br></br>
-     {% if site.disqus.shortname %}
-       {% include disqus_comments.html %}
-     {% endif %}
+      <div clas="row">
+        <div id="disqus_thread"></div>
+          <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            function disqus_config() { this.experiment.enable_scroll_container = true; }
+            var disqus_shortname = "{{ site.disqus_account }}"; // required: replace example with your forum shortname
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+          </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+     </div>
+   </div>
  </article>
 
 </div>
