--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,9 @@ h1, h2, h3, h4, h5, .card-title, a:hover {
 * Page elements
 */
 
+.card-group {
+    width: 480px;
+}
 
 .page-content {
     background: -webkit-linear-gradient(left, #fafafa, #fcfcfc, white, white, #fcfcfc, #fafafa);
