--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,5 @@
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
+  {% seo %}
 </head>
