--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,60 @@
-<header class="site-header" role="banner">
-  <nav class="navbar">
-    <a class="navbar-brand" href="{{site.url}}">
-      <img src="{{site.url}}/assets/images/FR.svg" width="30" height="30" class="d-inline-block align-top" alt="FabioRosado">
-    </a>
-    <ul class="nav justify-content-center">
-    <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
-    </li>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-brand-color">
+      <a class="navbar-brand" href="{{ site.url }}">
+          <img src="{{site.url}}/assets/images/logo.svg" width="35" height="35" alt="{{ site.title }}">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+      </button>
 
-    {% for link in site.pages %}
-      {% if link.title != None %}
-          <li class="nav-item">
-              <a class="nav-link" href="{{link.url}}"> {{ link.title }}</a>
-          </li>
-      {% endif %}
-    {% endfor %}
-  </ul>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                  <a class="nav-link" href="{{ site.url }}">Home</a>
+              </li>
+              {% for link in site.pages %}
+                  {% if link.title != None %}
+                  <li class="nav-item">
+                      <a class="nav-link" href="{{ link.url }}">{{ link.title }}</a>
+                  </li>
+                  {% endif %}
+             {% endfor %}
+          </ul>
+          <div class="d-none d-md-block">
+              <ul class="navbar-nav nav-flex-icons">
+                  {% if site.github_username %}
+                       <li class="nav-item">
+                          <a class="nav-link" href="https://github.com/{{ site.github_username }}"><i class="fa fa-github"></i></a>
+                      </li>
+                  {% endif %}
+                  {% if site.twitter_username %}
+                      <li class="nav-item">
+                          <a class="nav-link" href="https://twitter.com/{{ site.twitter_username }}"><i class="fa fa-twitter"></i></a>
+                      </li>
+                  {% endif %}
+                  {% if site.medium_username %}
+                      <li class="nav-item">
+                          <a class="nav-link" href="https://medium.com/@{{ site.medium_username }}"><i class="fa fa-medium"></i></a>
+                      </li>
+                  {% endif %}
+                  {% if site.facebook_username %}
+                      <li class="nav-item">
+                          <a class="nav-link" href="https://www.facebook.com/{{ site.facebook_username }}"><i class="fa fa-facebook"></i></a>
+                      </li>
+                  {% endif %}
+                  {% if site.instagram_username %}
+                      <li class="nav-item">
+                          <a class="nav-link" href="https://www.instagram.com/{{ site.instagram_username }}"><i class="fa fa-instagram"></i></a>
+                      </li>
+                  {% endif %}
+                  {% if site.linkedin_username %}
+                       <li class="nav-item">
+                          <a class="nav-link" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="fa fa-linkedin"></i></a>
+                      </li>
+                  {% endif %}
+              </ul>
+          </div>
+      </div>
   </nav>
 </header>
+
