--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
+<html lang="en">
   {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-    <main class="page-content" aria-label="Content">
+    <body>
+      {% include header.html %}
 
         {{ content }}
 
-    </main>
 
-    {% include footer.html %}
-
-  </body>
-
+      {% include footer.html %}
+    </body>
 </html>
