--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,65 +1,42 @@
 ---
 layout: default
 ---
-<div class="wrapper">
- <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-   <header class="post-header">
-     <h1 class="post-title title" itemprop="name headline">{{ page.title | escape }}</h1>
-     <h3 class="text-muted"> {{page.subtitle}}</h3>
-     <p class="post-meta">
-       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-         {% assign date_format = site.minima.date_format | default: "%A, %-d %b %Y" %}
-           <i class="fa fa-clock-o" aria-hidden="true"></i> &nbsp;{{ page.date | date: date_format }} &emsp;
-       </time>
+<div class="img-fluid">
+  <img src="{{ site.url }}/assets/images/{{ page.image }}" alt="{{ page.title | escape}}" style="z-index: 0; height: 500px; width: 100%; display: block; padding-top: 20px;">
+</div>
 
-       <i class="fa fa-user-o" aria-hidden="true"></i>
-         <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">&nbsp;{{ site.author_name }} &emsp;</span></span>
-       <i class="fa fa-folder-o" aria-hidden="true"></i> &nbsp;{{ page.categories }}
-     </p>
+<div class="container">
+  <div class="post-header text-center">
+    <h1 class="drop-shadow">{{ page.title }}</h1>
+    <h3 class="text-muted"> {{page.subtitle}}</h3>
+    <p class="text-muted">
+      {% assign date_format = site.minima.date_format | default: "%A, %-d %b %Y" %}
+      <i class="fa fa-clock-o" aria-hidden="true"></i> &nbsp;{{ page.date | date: date_format }} &emsp;
+      <i class="fa fa-user-o" aria-hidden="true"></i> {{site.author}} &emsp;
+      <i class="fa fa-folder-o" aria-hidden="true"></i> &nbsp;{{ page.categories }}
+    </p>
+  </div>
+  
+  <div class="narrow">
+    {{ content }}
 
-   </header>
-
-   <div class="post-content" itemprop="articleBody">
-     {{ content }}
-   </div>
-
-   <div>
-       <hr></br>
-       <div class="row">
-           <div class="col-md-3">
-             <h5>Share this on: </h5>
-           </div>
-           <div class="col">
-             <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">
-               <button type="button" class="btn btn-info btn-sm"><i class="fa fa-twitter fa-share" aria-hidden="true"></i> Twitter</button></a>
-             <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
-               <button type="button" class="btn btn-primary btn-sm"> <i class="fa fa-facebook fa-share" aria-hidden="true"></i> Facebook</button></a>
-             <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+">
-               <button type="button" class="btn btn-danger btn-sm"><i class="fa fa-google-plus fa-share" aria-hidden="true"></i> Google+</button></a>
-             <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url}}&title={{ page.title }}" rel="nofollow" target="_blank" title="Share on Linkedin">
-               <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-linkedin fa-share" aria-hidden="true"></i> Linkedin</button></a>
-           </div>
-       </div>
-        </br>
-   </div>
-   <div>
-     <hr></br></br>
-      <div clas="row">
+    <div class="social">
+      <hr class="spaced">
+        <div class="sharethis-inline-share-buttons"></div>
+      <hr class="spaced">
         <div id="disqus_thread"></div>
-          <script type="text/javascript">
-            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            function disqus_config() { this.experiment.enable_scroll_container = true; }
-            var disqus_shortname = "{{ site.disqus_account }}"; // required: replace example with your forum shortname
-            /* * * DON'T EDIT BELOW THIS LINE * * */
-            (function() {
-              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-          </script>
+        <script type="text/javascript">
+          /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+          function disqus_config() { this.experiment.enable_scroll_container = true; }
+          var disqus_shortname = "{{ site.disqus_username }}"; // required: replace example with your forum shortname
+          /* * * DON'T EDIT BELOW THIS LINE * * */
+          (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+          })();
+        </script>
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-     </div>
-   </div>
- </article>
-
+    </div>    
+  </div>
 </div>
