Update font family, add padding to top image in each post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="https://use.fontawesome.com/021da17a9a.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Roboto|Open+Sans|Raleway|Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Lora" rel="stylesheet">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
 {% if site.google_analytics %}
