--- a/_sass/niebieski.scss
+++ b/_sass/niebieski.scss
@@ -2,12 +2,12 @@
 
 // Define defaults for each variable.
 
-$base-font-family: "Roboto", Helvetica, Arial, sans-serif !default;
-$base-font-size:   17px !default;
+$base-font-family: "Lato", Arial, sans-serif !default;
+$base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
-$heading-font: "Open Sans", sans-serif !default;
+$heading-font: "Lora", sans-serif !default;
 
 $spacing-unit:     30px !default;
 $padding-unit:     1.5rem !default;
