--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="img-fluid">
+<div class="img-fluid pad-top">
   <img src="{{ site.url }}/assets/images/{{ page.image }}" alt="{{ page.title | escape}}" style="z-index: 0; height: 500px; width: 100%; display: block; padding-top: 20px;">
 </div>
 
