--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-brand-color">
-      <a class="navbar-brand" href="{{ site.url }}">
+      <a class="navbar-brand" href="/">
           <img src="{{site.url}}/assets/images/logo.svg" width="35" height="35" alt="{{ site.title }}">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                  <a class="nav-link" href="{{ site.url }}">Home</a>
+                  <a class="nav-link" href="/">Home</a>
               </li>
               {% for link in site.pages %}
                   {% if link.title != None %}
