--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -89,11 +89,11 @@ layout: default
         {% else %}
           {% assign post_counter = post_counter | plus: 1 %}
           <div class="col-md-4 col-sm-12 text-center recent-posts">
-            <a href="{{post.url}}"><img class="img-fluid" src="{{site.url}}/assets/images/{{post.image}}" alt={{post.title | escape}}></a>
+            <a href="{{post.url}}"><img class="img-fluid post-image" src="{{site.url}}/assets/images/{{post.image}}" alt={{post.title | escape}}></a>
             <h6 class="spaced">{{ post.category_icon }} {{ post.categories }} </h6>
             <h2 class="dark-text"> {{ post.title }} </h2>
             <p>{{ post.excerpt | truncate:165}}</p>
-            <a class="btn btn-brand drop-shadow" href="{{ post.url }}" role="button"> Read More</a>  
+            <a class="btn btn-brand drop-shadow" href="{{ post.url }}" role="button"> Read More</a>
           </div>
         {% endif %}
       {% endfor %}
