--- a/_sass/niebieski/_base.scss
+++ b/_sass/niebieski/_base.scss
@@ -100,6 +100,11 @@ img {
   vertical-align: middle;
 }
 
+.post-image {
+    width: 700px !important;
+    height: 250px !important;
+}
+
 .bg
 {
   width: 100% !important;
