--- a/assets/files/weather-tutorial/main.css
+++ b/assets/files/weather-tutorial/main.css
@@ -17,7 +17,7 @@ body {
   width:    520px;
   height:   170px;
 
-  position: fixed;
+  position: absolute;
   top:      35%;
   left:     35%;
 }
@@ -41,4 +41,16 @@ body {
   display: block;
   position: relative;
   top: -60px;
+}
+
+#info {
+  padding-left: 20px;
+  position: relative;
+  top: -20px;
+}
+
+.icon {
+  position: inherit;
+  top: 2px;
+  padding-left: 8px;
 }
