Fix fontawesome icons

--- a/_sass/niebieski/_layout.scss
+++ b/_sass/niebieski/_layout.scss
@@ -162,7 +162,7 @@
     position: relative;
     margin-bottom: $spacing-unit * 2;
 
-    .fa {
+    .fa, .far, .fab, .fas {
         color: $brand-color;
     }
 }
