--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,9 @@ layout: default
     <h3 class="text-muted"> {{page.subtitle}}</h3>
     <p class="text-muted">
       {% assign date_format = site.minima.date_format | default: "%A, %-d %b %Y" %}
-      <i class="fa fa-clock-o" aria-hidden="true"></i> &nbsp;{{ page.date | date: date_format }} &emsp;
-      <i class="fa fa-user-o" aria-hidden="true"></i> {{site.author}} &emsp;
-      <i class="fa fa-folder-o" aria-hidden="true"></i> &nbsp;{{ page.categories }}
+      <i class="far fa-clock"></i> &nbsp;{{ page.date | date: date_format }} &emsp;
+      <i class="far fa-user"></i> {{site.author}} &emsp;
+      <i class="far fa-folder"></i> &nbsp;{{ page.categories }}
     </p>
   </div>
   
