Remove CDN links from footer, update main.scss with base variables for new style

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,12 @@
 <header>
+    <nav class="navbar">
+        <a class="navbar-brand" href="/">
+            <img src="{{site.url}}/assets/images/logo.svg" width="70" height="70" alt="{{site.title}}">
+        </a>
+    </nav>
+</header>
+
+<!-- <header>
   <nav class="navbar navbar-expand-lg navbar-brand-color">
       <a class="navbar-brand" href="/">
           <img src="{{site.url}}/assets/images/logo.svg" width="35" height="35" alt="{{ site.title }}">
@@ -56,5 +64,5 @@
           </div>
       </div>
   </nav>
-</header>
+</header> -->
 
