--- a/assets/_sass/_syntax-highlighting.scss
+++ b/assets/_sass/_syntax-highlighting.scss
@@ -4,7 +4,7 @@
 pre,
 code {
   color: #3d5ce5;
-  border: 1px solid $grey-color-light;
+  border: 1px solid grey;
   border-radius: 3px;
   background-color: #edfbff;
 }
@@ -29,7 +29,7 @@ pre {
  */
 .highlight {
   background: #fff;
-  @extend %vertical-rhythm;
+  margin-bottom: $spacing-unit / 1.5;
 
   .highlighter-rouge & {
     background: #edfbff;
