--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,19 @@
         <a class="navbar-brand" href="/">
             <img src="{{site.url}}/assets/images/logo.svg" width="70" height="70" alt="{{site.title}}">
         </a>
+        <ul class="navigation">
+            <li>
+                <a href="/">Home</a>
+            </li>
+            {% for link in site.pages %}
+                {% if link.title != None %}
+                    <li>
+                        <a href="{{link.url}}">{{link.title}}</a>
+                    </li>
+                {% endif %}
+            {% endfor %}
+            
+        </ul>
     </nav>
 </header>
 
