--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar">
         <a class="navbar-brand" href="/">
-            <img src="{{site.url}}/assets/images/logo.svg" width="70" height="70" alt="{{site.title}}">
+            <img src="{{site.url}}/assets/images/logo.svg" width="50" height="50" alt="{{site.title}}">
         </a>
         <ul class="navigation">
             <li>
@@ -14,9 +14,25 @@
                     </li>
                 {% endif %}
             {% endfor %}
-            
         </ul>
     </nav>
+    <div class="header-container">
+        <div class="intro">
+            <h1>Hello,</h1>
+            <p>I’m Fabio, a Portuguese expat living in the UK. I’m currently working for an airline as cabin crew and learning how to code in my free time.</p>
+            <h1>Let's Chat!</h1>
+            <ul class="horizontal-list">
+                <li><a href="mailto:fabiorosado@outlook.com"><button class="full-button">Say Hello</button></a></li>
+                <li><a href="https://github.com/FabioRosado" target="_blank"><i class="fab fa-2x fa-github-square"></i></a></li>
+                <li><a href="https://twitter.com/FabioRosado_" target="_blank"><i class="fab fa-2x fa-twitter-square"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/fabiorosado/" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/fabiorosado/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
+            </ul>
+        </div>
+        <div class="pictures">
+            
+        </div>
+    </div>
 </header>
 
 <!-- <header>
