--- a/assets/_sass/_layout.scss
+++ b/assets/_sass/_layout.scss
@@ -1,10 +1,101 @@
+// Contant classes
+.horizontal-list {
+  list-style-type: none;
+  display: flex;
+
+  li {
+    padding-right: $spacing-unit / 2;
+  }
+}
+
+.full-button {
+  cursor: pointer;
+  background-color: color(secondary-color);
+  color: color(primary-color);
+  font-family: $base-font-family;
+  border: 0;
+  border-radius: 5px;
+  padding: 8px;
+  font-size: medium;
+  transition: background-color 0.5s ease-out;
+}
+
+.full-button:hover {
+  background-color: darken(color(secondary-color), 7%);
+  color: lighten(color(primary-color), 7%);
+  transition: background-color 0.5s ease-out;
+}
+
+.fab {
+  color: color(secondary-color);
+  transition: background-color 0.5s ease-out;
+}
+.fab:hover {
+  color: darken(color(secondary-color), 5%);
+  transition: background-color 0.5s ease-out;
+}
+
+// Design specific classes
 header {
   background-image: url(../assets/images/header.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
   background-color: color(primary-color);
+  color: color(text-color-light);
+
+  nav {
+    padding: 1rem 0rem 0rem 3rem;
+    @include desktop {
+      display: grid;
+      grid-template-columns: 4fr 2.5fr;
+    }
+    .navigation {
+      display: none;
+      list-style-type: none;
+      @include desktop {
+        display: block;
+      }
+    }
+    
+    li a {
+      display: block;
+      color: color(text-color-light);
+      text-decoration: none;
+    
+      @include desktop {
+        float: left;
+        margin-right: 1.3rem;
+        padding: .2rem .5rem .2rem .5rem;
+        border-radius: 5px;
+        transition: background-color 0.5s ease-out;
+      }
+    }
+    li a:hover {
+      background-color: color(secondary-color);
+      color: color(primary-color);
+      transition: background-color 0.5s ease-out;
+    }
+  }
+
+  .header-container {
+    padding-top: $padding-unit * 2;
+    padding-bottom: $padding-unit;
+    display: grid;
+    grid-template-columns: 1.5fr 3fr;
+  }
+
+  .intro {
+    padding-left: $padding-unit * 2;
+    h1 {
+      padding: .5rem 0rem 0rem .5rem;
+      font-family: $cursive-font;
+      color: color(text-color-light);
+    }
+
+    p {
+      padding-left: 1rem;
+    }
+  }
 }
 
-nav {
-  padding: 1rem 0rem 0rem 3rem;
-}
+
