Finish header desktop version

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,18 @@
             </ul>
         </div>
         <div class="pictures">
-            
+            <div id="box">
+                <div id="shadow"></div>
+                <div id="frame"><img id="picture" src='{{site.url}}/assets/images/fabian-grohs-597395-unsplash.jpg'></div>
+            </div>
+            <div id="box">
+                <div id="shadow"></div>
+                <div id="frame"><img id="picture" src='{{site.url}}/assets/images/fabiorosado.jpg'></div>
+            </div>
+            <div id="box">
+                <div id="shadow"></div>
+                <div id="frame"><img id="picture" src='{{site.url}}/assets/images/michael-henry-284473-unsplash.jpg'></div>
+            </div>
         </div>
     </div>
 </header>
