--- a/assets/_sass/_layout.scss
+++ b/assets/_sass/_layout.scss
@@ -2,6 +2,7 @@
 .horizontal-list {
   list-style-type: none;
   display: flex;
+  padding-top: 1rem;
 
   li {
     padding-right: $spacing-unit / 2;
@@ -79,13 +80,18 @@ header {
 
   .header-container {
     padding-top: $padding-unit * 2;
-    padding-bottom: $padding-unit;
+    padding-bottom: $padding-unit * 2;
     display: grid;
-    grid-template-columns: 1.5fr 3fr;
+    grid-template-columns: 3fr 3fr;
+    grid-template-areas: 
+    "intro pictures"
+    "intro pictures";
   }
 
   .intro {
+    grid-area: "intro";
     padding-left: $padding-unit * 2;
+    margin-right: 12rem;
     h1 {
       padding: .5rem 0rem 0rem .5rem;
       font-family: $cursive-font;
@@ -94,6 +100,43 @@ header {
 
     p {
       padding-left: 1rem;
+    }
+  }
+
+  .pictures {
+    grid-area: "pictures";
+    display: flex;
+    margin-left: 7rem;
+
+    #box:nth-child(2) {
+      padding-left: 98px;
+      position: absolute;
+      top: 232px;
+    }
+
+    #box {
+      position: relative;
+      margin: 0rem 4rem 4rem 0rem;
+      width: 180px;
+      margin-right: 1rem;
+    }
+    
+    #shadow {
+      position: absolute;
+      background: color(background-color-darker);
+      width: 180px;
+      height: 180px;
+      top: 35px;
+      clip-path: polygon(52% 1%, 100% 51%, 51% 100%, 0% 50%);
+    }
+    #frame {
+      width: 180px;
+      clip-path: polygon(52% 10%, 98.44% 50.56%, 51% 89%, 1.45% 49.56%);
+      background: color(secondary-color);
+    }
+    #picture {
+      clip-path: polygon(53% 11%, 99% 52%, 52% 91%, 3% 51%);
+      width: 177px;
     }
   }
 }
