--- a/assets/main.css
+++ b/assets/main.css
@@ -73,7 +73,7 @@ h1 {
 
 header {
   background-image: url(../assets/images/header.jpg);
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   background-color: #1E2A39;
   color: #FFFFFF;
@@ -83,7 +83,7 @@ header nav {
   padding: 1rem 0rem 0rem 3rem;
 }
 
-@media (min-width: 940px) {
+@media (min-width: 970px) {
   header nav {
     display: -ms-grid;
     display: grid;
@@ -97,7 +97,7 @@ header nav .navigation {
   list-style-type: none;
 }
 
-@media (min-width: 940px) {
+@media (min-width: 970px) {
   header nav .navigation {
     display: block;
   }
@@ -109,7 +109,7 @@ header nav li a {
   text-decoration: none;
 }
 
-@media (min-width: 940px) {
+@media (min-width: 970px) {
   header nav li a {
     float: left;
     margin-right: 1.3rem;
@@ -132,19 +132,34 @@ header .header-container {
   padding-bottom: 3rem;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 3fr 3fr;
-      grid-template-columns: 3fr 3fr;
-      grid-template-areas: "intro pictures" "intro pictures";
+      grid-template-areas: "intro" "pictures";
+}
+
+@media (min-width: 970px) {
+  header .header-container {
+    -ms-grid-columns: 3fr 3fr;
+        grid-template-columns: 3fr 3fr;
+        grid-template-areas: "intro pictures";
+  }
 }
 
 header .intro {
-  grid-area: "intro";
-  padding-left: 3rem;
-  margin-right: 12rem;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: intro;
+  padding-left: 2rem;
+  margin-right: 4rem;
+}
+
+@media (min-width: 970px) {
+  header .intro {
+    padding-left: 3rem;
+    margin-right: 9rem;
+  }
 }
 
 header .intro h1 {
-  padding: .5rem 0rem 0rem .5rem;
+  padding: .5rem 0rem 0rem 1rem;
   font-family: "Dancing Script", cursive;
   color: #FFFFFF;
 }
@@ -153,48 +168,78 @@ header .intro p {
   padding-left: 1rem;
 }
 
+header .intro .horizontal-list li:nth-child(1) {
+  position: absolute;
+  margin-top: 3rem;
+}
+
+@media (min-width: 970px) {
+  header .intro .horizontal-list li:nth-child(1) {
+    position: inherit;
+    margin-top: 0rem;
+  }
+}
+
 header .pictures {
-  grid-area: "pictures";
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 7rem;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: pictures;
+  display: -ms-grid;
+  display: grid;
+  margin: 2rem 0rem 0rem 3rem;
+  margin-left: 3rem;
+}
+
+@media (min-width: 970px) {
+  header .pictures {
+    margin: 2rem 0rem 0rem 7rem;
+    margin-left: 7rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 header .pictures #box:nth-child(2) {
-  padding-left: 98px;
+  padding-left: 88px;
   position: absolute;
-  top: 232px;
+  margin-top: 6.7rem;
+}
+
+@media (min-width: 970px) {
+  header .pictures #box:nth-child(2) {
+    padding-left: 88px;
+    position: absolute;
+  }
 }
 
 header .pictures #box {
   position: relative;
-  margin: 0rem 4rem 4rem 0rem;
-  width: 180px;
+  width: 160px;
   margin-right: 1rem;
 }
 
 header .pictures #shadow {
   position: absolute;
   background: #F2F6F9;
-  width: 180px;
-  height: 180px;
+  width: 160px;
+  height: 160px;
   top: 35px;
-  -webkit-clip-path: polygon(52% 1%, 100% 51%, 51% 100%, 0% 50%);
-          clip-path: polygon(52% 1%, 100% 51%, 51% 100%, 0% 50%);
+  -webkit-clip-path: polygon(52% 1%, 100% 51%, 51% 100%, 0% 49%);
+          clip-path: polygon(52% 1%, 100% 51%, 51% 100%, 0% 49%);
 }
 
 header .pictures #frame {
-  width: 180px;
-  -webkit-clip-path: polygon(52% 10%, 98.44% 50.56%, 51% 89%, 1.45% 49.56%);
-          clip-path: polygon(52% 10%, 98.44% 50.56%, 51% 89%, 1.45% 49.56%);
+  width: 160px;
+  -webkit-clip-path: polygon(52% 10%, 97.81% 50.07%, 51% 88.51%, 2.08% 49.56%);
+          clip-path: polygon(52% 10%, 97.81% 50.07%, 51% 88.51%, 2.08% 49.56%);
   background: #FF721E;
 }
 
 header .pictures #picture {
   -webkit-clip-path: polygon(53% 11%, 99% 52%, 52% 91%, 3% 51%);
           clip-path: polygon(53% 11%, 99% 52%, 52% 91%, 3% 51%);
-  width: 177px;
+  width: 157px;
 }
 
 /**
