Add menu button on small screens

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,12 @@
         <a class="navbar-brand" href="/">
             <img src="{{site.url}}/assets/images/logo.svg" width="50" height="50" alt="{{site.title}}">
         </a>
+        <button class="full-button visible-xs" id="collapseBtn" type="button" aria-pressed="false" aria-expanded="false" aria-controls="navigation">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
         <ul class="navigation">
             <li>
                 <a href="/">Home</a>
