--- a/assets/_sass/_header.scss
+++ b/assets/_sass/_header.scss
@@ -20,13 +20,15 @@ header {
     }
     
     li a {
+      margin: .5rem 5rem 0rem 5rem;
+      text-align: center;
       display: block;
       color: color(text-color-light);
       text-decoration: none;
     
       @include desktop {
         float: left;
-        margin-right: 1.3rem;
+        margin: 0rem 1.3rem 0rem 0rem;
         padding: .2rem .5rem .2rem .5rem;
         border-radius: 5px;
         transition: background-color 0.5s ease-out;
@@ -34,9 +36,30 @@ header {
     }
 
     li a:hover {
+      padding: .2rem .5rem .2rem .5rem;
+      border-radius: 5px;
+      margin: 0rem 5rem 0rem 5rem;
       background-color: color(secondary-color);
       color: color(primary-color);
       transition: background-color 0.5s ease-out;
+      @include desktop {
+        margin: 0rem 1.3rem 0rem 0rem;
+        transition: background-color 0.5s ease-out;
+      }
+    }
+
+    #collapseBtn {
+      float: right;
+      margin: 0rem 1.5rem;
+  
+      .icon-bar {
+        display: block;
+        width: 22px;
+        height: 2px;
+        margin: 4px;
+        border-radius: 1px;
+        background-color:color(primary-color);
+      }
     }
   }
 
