--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,38 @@
 layout: default
 ---
 
+<div class="about">
+    <div class="container-middle center-text">
+        <h1>About Me</h1>
+        <p>
+            I've always been interested in coding and creating my own programs. After completing the online course Intro to CS and programming with python from MIT at edx.org
+            I've decided that it was time to dedicate my free time to learn more about coding.  MY goal is to become a good developer and work in challenging new things.
+        </p>
+    </div>
+    <div class="three-columns">
+        <div class="card">
+            <i class="fas fa-3x fa-language"></i>
+            <h2 class="white-text">Languages</h2>
+            <p>HTML CSS Python</p>
+            <p>Javascript SASS</p>
+        </div>
+        <div class="card">
+            <i class="fas fa-3x fa-toolbox"></i>
+            <h2 class="white-text">Dev Tools</h2>
+            <p>Pycharm Terminal</p>
+            <p>AdobeXD Postman</p>
+            <p>VSCode Tox Git</p>
+        </div>
+        <div class="about-card">
+            <i class="fas fa-3x fa-cogs"></i>
+            <h2 class="white-text">Frameworks</h2>
+            <p>Jekyll Bulma </p>
+            <p>VueJS Electron</p>
+            <p>Bootstrap React</p>
+        </div>
+    </div>
+</div>
+
 <div class="content-start">
     <div class="col-sm-6 offset-sm-3 text-center">
       <img src="{{ site.url}}/assets/images/profile_pic.jpg" alt="{{ site.title }}" class="rounded-circle">
