--- a/assets/_sass/_layout.scss
+++ b/assets/_sass/_layout.scss
@@ -50,109 +50,37 @@
   transition: background-color 0.5s ease-out;
 }
 
-// Design specific classes
-// header {
-//   background-image: url(../assets/images/header.jpg);
-//   background-size: 100%;
-//   background-repeat: no-repeat;
-//   background-color: color(primary-color);
-//   color: color(text-color-light);
+.three-columns {
+  display: grid;
+  grid-auto-flow: row;
+  grid-gap: 3rem;
+  @include desktop {
+    grid-auto-flow: column;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 
-//   nav {
-//     padding: 1rem 0rem 0rem 3rem;
-//     @include desktop {
-//       display: grid;
-//       grid-template-columns: 4fr 2.5fr;
-//     }
-//     .navigation {
-//       display: none;
-//       list-style-type: none;
-//       @include desktop {
-//         display: block;
-//       }
-//     }
-    
-//     li a {
-//       display: block;
-//       color: color(text-color-light);
-//       text-decoration: none;
-    
-//       @include desktop {
-//         float: left;
-//         margin-right: 1.3rem;
-//         padding: .2rem .5rem .2rem .5rem;
-//         border-radius: 5px;
-//         transition: background-color 0.5s ease-out;
-//       }
-//     }
-//     li a:hover {
-//       background-color: color(secondary-color);
-//       color: color(primary-color);
-//       transition: background-color 0.5s ease-out;
-//     }
-//   }
+.margin-top {
+  margin-top: $padding-unit;
+}
 
-//   .header-container {
-//     padding-top: $padding-unit * 2;
-//     padding-bottom: $padding-unit * 2;
-//     display: grid;
-//     grid-template-columns: 3fr 3fr;
-//     grid-template-areas: 
-//     "intro pictures"
-//     "intro pictures";
-//   }
+.center-text {
+  @include desktop {
+    text-align: center;
+  }
+}
 
-//   .intro {
-//     grid-area: "intro";
-//     padding-left: $padding-unit * 2;
-//     margin-right: 12rem;
-//     h1 {
-//       padding: .5rem 0rem 0rem .5rem;
-//       font-family: $cursive-font;
-//       color: color(text-color-light);
-//     }
+.container-middle {
+  margin-bottom: 3rem;
+  @include desktop {
+    margin: 0rem 10rem 5rem 10rem;
+  }
+}
 
-//     p {
-//       padding-left: 1rem;
-//     }
-//   }
+.white-text {
+  color: color(text-color-light);
+}
 
-//   .pictures {
-//     grid-area: "pictures";
-//     display: flex;
-//     margin-left: 7rem;
-
-//     #box:nth-child(2) {
-//       padding-left: 98px;
-//       position: absolute;
-//       top: 232px;
-//     }
-
-//     #box {
-//       position: relative;
-//       margin: 0rem 4rem 4rem 0rem;
-//       width: 180px;
-//       margin-right: 1rem;
-//     }
-    
-//     #shadow {
-//       position: absolute;
-//       background: color(background-color-darker);
-//       width: 180px;
-//       height: 180px;
-//       top: 35px;
-//       clip-path: polygon(52% 1%, 100% 51%, 51% 100%, 0% 49%);
-//     }
-//     #frame {
-//       width: 180px;
-//       clip-path: polygon(52% 10%, 98.44% 50.56%, 51% 89%, 1.45% 49.56%);
-//       background: color(secondary-color);
-//     }
-//     #picture {
-//       clip-path: polygon(53% 11%, 99% 52%, 52% 91%, 3% 51%);
-//       width: 177px;
-//     }
-//   }
-// }
-
-
+.grey-text {
+  color: color(text-color-grey);
+}
