--- a/assets/main.css
+++ b/assets/main.css
@@ -18,7 +18,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Josefin Slab", serif;
+  font-family: "Jura", sans-serif;
   font-weight: 700;
   color: #1E2A39;
 }
@@ -85,6 +85,49 @@ h1 {
   color: #ff6205;
   -webkit-transition: background-color 0.5s ease-out;
   transition: background-color 0.5s ease-out;
+}
+
+.three-columns {
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: row;
+  grid-gap: 3rem;
+}
+
+@media (min-width: 970px) {
+  .three-columns {
+    grid-auto-flow: column;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.margin-top {
+  margin-top: 1.5rem;
+}
+
+@media (min-width: 970px) {
+  .center-text {
+    text-align: center;
+  }
+}
+
+.container-middle {
+  margin-bottom: 3rem;
+}
+
+@media (min-width: 970px) {
+  .container-middle {
+    margin: 0rem 10rem 5rem 10rem;
+  }
+}
+
+.white-text {
+  color: #FFFFFF;
+}
+
+.grey-text {
+  color: #57606B;
 }
 
 header {
@@ -197,7 +240,7 @@ header .intro {
 @media (min-width: 970px) {
   header .intro {
     padding-left: 3rem;
-    margin-right: 9rem;
+    margin: 2rem 3rem 5rem 3rem;
   }
 }
 
@@ -209,6 +252,16 @@ header .intro h1 {
 
 header .intro p {
   padding-left: 1rem;
+}
+
+header .intro .horizontal-list {
+  margin-left: 2rem;
+}
+
+@media (min-width: 970px) {
+  header .intro .horizontal-list {
+    margin-left: 0rem;
+  }
 }
 
 header .intro .horizontal-list li:nth-child(1) {
@@ -227,19 +280,15 @@ header .pictures {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: pictures;
-  display: -ms-grid;
-  display: grid;
-  margin: 2rem 0rem 0rem 3rem;
-  margin-left: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 5rem 0rem 8rem 2rem;
 }
 
 @media (min-width: 970px) {
   header .pictures {
-    margin: 2rem 0rem 0rem 7rem;
-    margin-left: 7rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    margin: 2rem 0rem 0rem 9rem;
   }
 }
 
@@ -283,6 +332,32 @@ header .pictures #picture {
   -webkit-clip-path: polygon(53% 11%, 99% 52%, 52% 91%, 3% 51%);
           clip-path: polygon(53% 11%, 99% 52%, 52% 91%, 3% 51%);
   width: 157px;
+}
+
+.about {
+  margin: 4rem 3rem 3rem 3rem;
+}
+
+@media (min-width: 970px) {
+  .about {
+    margin: 6rem 3rem 3rem 3rem;
+  }
+}
+
+.about .about-card {
+  background-color: #1E2A39;
+  color: #FF721E;
+  border-radius: 10px;
+  padding: 3rem;
+  text-align: center;
+}
+
+.about .about-card h2 {
+  padding: .5rem 0rem 1rem 0rem;
+}
+
+.about .about-card p {
+  word-spacing: 15px;
 }
 
 /**
